[gd_scene load_steps=2 format=2]

[ext_resource path="res://player/LedgeWallDetector.gd" type="Script" id=1]

[node name="LedgeWallDetector" type="Position2D"]
script = ExtResource( 1 )

[node name="RayBottom" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 20, 0 )
collide_with_areas = true

[node name="RayMiddle" type="RayCast2D" parent="."]
position = Vector2( 0, -10 )
enabled = true
cast_to = Vector2( 20, 0 )
collide_with_areas = true

[node name="RayTop" type="RayCast2D" parent="."]
position = Vector2( 0, -45 )
enabled = true
cast_to = Vector2( 20, 0 )
collide_with_areas = true
